--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@ body
     background-color:gray;
     margin: 0px;
     font-family: 'Times New Roman', Times, serif;
-    
+    height:100%;
+    width:984px;
 }
 
 
