--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ img.happy-birthday
 p
 {
     width: 40%;
-    text-align: center;
+    text-align: start;
     margin: auto;
     line-height: 2;
     color: white;
